# alpha-flow-ai

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.example.yaml
docs/: ARCHITECTURE.md  INSTALL.md
scripts/: run_brain.py
src/alerts/: dispatcher.py  templates.py
src/core/: brain.py  config.py  logging.py  scheduler.py  storage.py
src/data/: providers.py  service.py
src/engines/: candidate_builder.py  classifier.py  market_regime.py  options_flow.py  routing.py  scoring.py  technical.py
src/learning/: engine.py
src/models/: schemas.py
tests/: test_alert_formatting.py  test_config_retry.py  test_scoring_routing.py  test_storage.py
